fixed detailcard position on mobile

--- a/src/components/DetailCard.css
+++ b/src/components/DetailCard.css
@@ -119,3 +119,7 @@
 	font-size: 0.85em;
 	font-style: italic;
 } */
+
+.detail-card-odd {
+	bottom: 0;
+}
